--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
   </head>
   
  <body>
+   <nav>
+  <center>
+  <li> <a href="index.html"> Home </a> </li>
+  <li> <a href="filterapp.html"> Food Filter App </a> </li>
+  <li> <a href="signup.html"> Boxing Sign Up </a> </li>
+  <li> <a href="game.html"> Boxing Battles! </a> </li>
+</nav>
+  <br>
+   <br>
+     <br>
    <center>
+     
    <h3> Aaron's Website </h3>
 
   <img src="https://configurator.porsche.com/model/2025/992850/common/detail_M04I_m_0.jpg?h=3e102f97ab3cc86daacae2c8f1ed476e"
