--- a/filterapp.html
+++ b/filterapp.html
@@ -3,6 +3,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
  <body>
+    <nav>
+  <center>
+  <li> <a href="index.html"> Home </a> </li>
+  <li> <a href="filterapp.html"> Food Filter App </a> </li>
+  <li> <a href="signup.html"> Boxing Sign Up </a> </li>
+  <li> <a href="game.html"> Boxing Battles! </a> </li>
+    </nav>
 <center>
   <br>
   <br>
