--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
   <br>
   <br>
   <br>
-  <h1> Food Filter App </h1>
+  <h4> Boxing Battles! </h4>
    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/8J6zyqhswHe0sVwyI1MtHQGeoCJ_6JFvKrZpNimfUAs/embed?nosource"></iframe>   
  </body>
 </html>
