--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <center>
   <li> <a href="index.html"> Home </a> </li>
   <li> <a href="filterapp.html"> Food Filter App </a> </li>
-  <li> <a href="signup.html"> Boxing Sign Up </a> </li>
-  <li> <a href="game.html"> Boxing Battles! </a> </li>
+  <li> <a href="signup.html"> Boxing Battles! </a> </li>
+  <li> <a href="game.html"> Color Sleuth </a> </li>
 </nav>
   <br>
    <br>
