--- a/filterapp.html
+++ b/filterapp.html
@@ -7,8 +7,8 @@
   <center>
   <li> <a href="index.html"> Home </a> </li>
   <li> <a href="filterapp.html"> Food Filter App </a> </li>
-  <li> <a href="signup.html"> Boxing Sign Up </a> </li>
-  <li> <a href="game.html"> Boxing Battles! </a> </li>
+  <li> <a href="signup.html"> Boxing Battles </a> </li>
+  <li> <a href="game.html"> Color Sleuth </a> </li>
     </nav>
 <center>
   <br>
