--- a/color.html
+++ b/color.html
@@ -1,1 +1,21 @@
-<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/dIzbCDGZGoADDKmM4-AjLhpbJpYCc1uHpGGJJWDYJNx/embed?nosource"></iframe>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+ <body>
+    <nav>
+  <center>
+  <li> <a href="index.html"> Home </a> </li>
+  <li> <a href="filterapp.html"> Food Filter App </a> </li>
+  <li> <a href="signup.html"> Boxing Battles </a> </li>
+  <li> <a href="game.html"> Color Sleuth </a> </li>
+    </nav>
+<center>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h5> Color Sleuth </h5>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/dIzbCDGZGoADDKmM4-AjLhpbJpYCc1uHpGGJJWDYJNx/embed?nosource"></iframe>
+ </body>
+</html>
